--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ override_dh_auto_clean:
 
 configure_with = --prefix=/usr --localstatedir=/var --sysconfdir=/etc \
 		--sbindir=/usr/sbin --with-udev --with-xen \
-		--with-pacemaker --with-rgmanager --without-bashcompletion
+		--with-pacemaker --with-rgmanager --with-bashcompletion
 
 ifneq	($(WITH_SYSTEMD),)
 configure_with += --with-systemdunitdir=/lib/systemd/system \
@@ -26,7 +26,7 @@ configure_with += --with-systemdunitdir=/lib/systemd/system \
 endif
 
 ifeq (,$(filter noprebuiltman,$(DEB_BUILD_OPTIONS)))
-configure_with += --with-prebuiltman
+#configure_with += --with-prebuiltman
 endif
 
 override_dh_auto_configure:
